--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Quiz_zip</string>
+    <string name="answer_prompt">Enter your answer here!</string>
+    <string name="q1">What was the name of the grandmother that died?</string>
+    <string name="q2">What is the name on the TV guide at guys\' house?</string>
+    <string name="q3">How many towel categories are there in Monica\'s basthroom?</string>
+    <string name="q4">Who scares the bezeezus out of Chandler?</string>
+    <string name="q5">What is Chandler Bing\'s job?</string>
 </resources>
